# scFates

./: .codecov.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AGENTS.md  Dockerfile  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py  test.sh  test_dendrogram_plot.py
.circleci/: check_diff.sh  config.yml
.github/workflows/: build.yml  build_and_upload.yml  doc.yml  docker.yml  install.yml  linecount.yml  load_test_upload.yml  mamba.yml
docs/: .buildinfo  api.rst  conf.py  index.rst  installation.rst  references.rst  release_notes.rst  requirements.txt  scFates.tl.cleanup.rst  scFates.tl.pseudotime.rst  scFates.tl.refine_pseudotime.rst  scFates.tl.root.rst  scFates.tl.roots.rst  scFates.tl.test_association.rst  scFates.tl.tree.rst
docs/.doctrees/: environment.pickle  index.doctree
docs/_static/: custom.css
docs/_static/carbon.now.sh/: index.html
docs/_static/carbon.now.sh/_next/static/2NKApQiTtgpabJFl6TuQH/: _buildManifest.js
docs/_static/carbon.now.sh/_next/static/chunks/: 22.ab94bb434143ed7eabdb.js  commons.49a6c04283a6ddfbae16.js  f65a48b9.15fd91e33f72713ec27e.js  ff239f9d.0f5ff1dc3a20af291aad.js  framework.4fe44a75b82dac5abd7a.js  main-eb7fa303a9cef9de0432.js  polyfills-7feeac6b17990b9743af.js  webpack-b60d77148240b1f2a556.js
docs/_static/carbon.now.sh/_next/static/chunks/pages/: _app-ac0a988b7c465a67e52b.js  embed-43574884f568728b9e33.js
docs/json/: api.fjson  index.fjson  installation.fjson  py-modindex.fjson  readthedocs-sphinx-domain-names.json  scFates.tl.cleanup.fjson  scFates.tl.tree.fjson
docs/notebooks/: Basic_pseudotime_analysis.ipynb  Conversion_from_CellRank_pipeline.ipynb  Convertion_from_CellRank_pipeline.ipynb
scFates/: __init__.py  logging.py  pl.py  pp.py  settings.py  tl.py
scFates/datasets/: __init__.py  _datasets.py  test.h5ad
scFates/get/: __init__.py  get.py
scFates/plot/: __init__.py  binned_pseudotime_meta.py  covariate.py  critical_transition.py  dendrogram.py  features.py  linearity_deviation.py  matrix.py  milestones.py  module_inclusion.py  modules.py  onset_stat.py  palette_tools.py  palettes.py  slide_cors.py  synchro_path.py  test_association.py  test_fork.py  trajectory.py  tree.py  trends.py  utils.py
scFates/preprocessing/: __init__.py  diffusion.py  pagoda2.py
scFates/tests/: test_basic.py  test_merge_segments.py  test_w_plots.py  test_wo_plots.py
scFates/tools/: __init__.py  _test_monocle3.R  activation.py  bifurcation_tools.py  cluster.py  conversion.py  correlation_tools.py  covariate.py  dendrogram.py  dist_tools_cpu.py  dist_tools_gpu.py  fit.py  graph_fitting.py  graph_operations.py  graph_tools.py  grapheno_modified.py  linearity_deviation.py  onset_stat.py  pseudotime.py  root.py  slide_cors.py  test_association.py  tree_tools.py  utils.py
scTree/: __init__.py  pl.py  settings.py
scTree/plot/: __init__.py  cluster.py  milestones.py  modules.py  palette_tools.py  palettes.py  slide_cors.py  synchro_path.py  test_association.py  tree.py  trends.py
scTree/tools/: __init__.py  bifurcation_tools.py  cleanup.py  cluster.py  correlation_tools.py  fit.py  pseudotime.py  root.py  slide_cells.py  test_association.py  test_fork.py  tree.py  tree_tools.py
scanTree/: logging.py  pl.py  tl.py
scanTree/plot/: tree.py
scanTree/tools/: __init__.py  bifurcation_tools.py
