[build-system]
requires = ["setuptools>=61.0", "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"

[project]
name = "scFates"
dynamic = ["version"]
description = "scanpy compatible python suite for fast tree inference and advanced pseudotime downstream analysis"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Louis Faure" }
]
dependencies = [
    "anndata>=0.7.4",
    "seaborn>=0.11.0",
    "tqdm>=4.45.0",
    "numba>=0.51.2",
    "scipy>=1.4.1",
    "scanpy>=1.7.0",
    "leidenalg>=0.8.1",
    "numpy",
    "joblib>=0.17.0",
    "pandas>=2.2.3",
    "statsmodels>=0.11.1",
    "matplotlib",
    "plotly>=4.8.1",
    "cycler>=0.10.0",
    "python_igraph>=0.8.2",
    "typing_extensions",
    "scikit-learn",
    "scikit-misc",
    "simpleppt>=1.1.3",
    "elpigraph-python==0.3.2",
    "networkx>3.0",
    "igraph>=0.9.6",
    "adjustText>=0.7.3",
]
urls = { Repository = "https://github.com/LouisFaure/scFates" }

[tool.setuptools.packages.find]
where = ["."]
include = ["scFates*"]

[tool.setuptools.package-data]
"*" = ["datasets/*.h5ad", "*.R"]

[tool.setuptools-git-versioning]
enabled = true

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | __pycache__
    | _build
    | build
    | dist
  )/
'''

[tool.pixi.workspace]
name = "scFates"
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
scFates = { path = ".", editable = true }

[tool.pixi.tasks]
docs = "cd docs && make html"

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "docs", no-default-feature = true }

[tool.pixi.dependencies]
python = "3.13.*"
r-mgcv = ">=1.9_4,<2"
rpy2 = ">=3.6.4,<4"

[tool.pixi.feature.test.dependencies]
pytest = "*"
coverage = "*"
mock = "*"
cmake = "*"

[tool.pixi.feature.test.tasks]
test = "pytest scFates/tests"
test-cov = "coverage run -m pytest scFates/tests/test_w_plots.py && coverage report -i -m && coverage xml -i"

[tool.pixi.feature.docs.dependencies]
python = "3.9.*"
sphinx = ">=4.5.0"
sphinx-rtd-theme = "*"
sphinx-book-theme = "*"
sphinxext-opengraph = "*"
sphinx-copybutton = "*"
matplotlib = "*"
nbsphinx = "*"
ipython = "*"
anndata = "*"
numpy = "*"
pandas = "*"
cycler = "*"
docutils = "*"
typing_extensions = "*"
importlib_metadata = "*"
mock = "*"

[tool.pixi.feature.docs.pypi-dependencies]
scFates = { path = ".", editable = true }
scanpydoc = { version = ">=0.7.4", extras = ["typehints"] }
readthedocs-sphinx-ext = "*"
Jinja2 = ">=3.1.6"

[tool.pixi.feature.docs.tasks]
docs = "cd docs && make html"
docs-build = "sphinx-build -T -b html docs"
